first index to 1 is fixed

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,7 +28,9 @@ bind -n M-l select-pane -R
 # ----------------------------------------------
 
 # Start numbering at 1
-set -g base-index 1
+set-option -g base-index 1
+setw -g pane-base-index 1
+
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
