--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes 
-bind | split-window -h
-bind - split-window -v
+bind h split-window -h
+bind v split-window -v
 unbind '"'
 unbind %
 
