horizontal and vertical inverted fixed

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes 
-bind h split-window -h
-bind v split-window -v
+bind v split-window -h
+bind h split-window -v
 unbind '"'
 unbind %
 
@@ -46,6 +46,15 @@ set -s escape-time 0
 # COPY & PASTE
 # ----------------------------------------------
 
+# enable vi like cursor movement in copy mode
+set-window-option -g mode-keys vi
+
+# How to copy and paste
+# 1) enter copy mode using <Control+a> <[>
+# 2) navigate to beginning of text, you want to select and hit <Space>
+# 3) move around using arrow keys to select region
+# 4) when you reach end of region simply hit <Enter> to copy the region
+# 5) now <Control+b> <]> will paste the selection
 
 
 
