pane color and tmux term is changed

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,7 +31,6 @@ bind -n M-l select-pane -R
 set-option -g base-index 1
 setw -g pane-base-index 1
 
-
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
@@ -41,6 +40,12 @@ set-option -g allow-rename off
 # delay 0
 set -s escape-time 0
 
+# true color in vim for tmux
+#set-option -ga terminal-overrides ",xterm-256color:tc"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:tc"
+#set -g default-terminal "screen-256color"
+#
 
 # ----------------------------------------------
 # COPY & PASTE
@@ -80,9 +85,9 @@ set -g default-terminal "screen-256color"
 # }
 
 # The panes {
-    set -g pane-border-bg colour0
+    set -g pane-border-bg default
     set -g pane-border-fg colour15
-    set -g pane-active-border-bg colour0
+    set -g pane-active-border-bg default
     set -g pane-active-border-fg colour82
 # }
 
