binding is changed

--- a/tmux.conf
+++ b/tmux.conf
@@ -126,12 +126,18 @@ bind P choose-buffer # choose which buffer to paste from
 
 # the following vi-copy bindings match my vim settings
 #   see https://github.com/gpakosz/.vim.git
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'C-v' send -X retanble-toggle
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-bind-key -Tcopy-mode-vi 'Escape' send -X cancel
-bind-key -Tcopy-mode-vi 'H' send -X start-of-line
-bind-key -Tcopy-mode-vi 'L' send -X end-of-line
+bind -t vi-copy v begin-selection
+bind -t vi-copy C-v rectangle-toggle
+bind -t vi-copy y copy-selection
+bind -t vi-copy Escape cancel
+bind -t vi-copy H start-of-line
+bind -t vi-copy L end-of-line
+#bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+#bind-key -Tcopy-mode-vi 'C-v' send -X retanble-toggle
+#bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+#bind-key -Tcopy-mode-vi 'Escape' send -X cancel
+#bind-key -Tcopy-mode-vi 'H' send -X start-of-line
+#bind-key -Tcopy-mode-vi 'L' send -X end-of-line
 
 # copy to Mac OSX pasteboard
 if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
