--- a/tmux.conf
+++ b/tmux.conf
@@ -31,6 +31,9 @@ bind h split-window -v
 unbind '"'
 unbind %
 
+# tmux-restruct
+run-shell ~/clone/path/resurrect.tmux
+
 # -- display -------------------------------------------------------------------
 
 set -g base-index 1         # start windows numbering at 1
@@ -61,12 +64,29 @@ set -g visual-activity off
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # pane navigation
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-bind > swap-pane -D       # swap current pane with the next one
-bind < swap-pane -U       # swap current pane with the previous one
+#bind -n M-h select-pane -L
+#bind -n M-j select-pane -D
+#bind -n M-k select-pane -U
+#bind -n M-l select-pane -R
+#bind > swap-pane -D       # swap current pane with the next one
+#bind < swap-pane -U       # swap current pane with the previous one
+# Smart pane switching with awareness of Vim splits.
+# # See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+is_fzf="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?fzf$'"
+bind -n C-h run "($is_vim && tmux send-keys C-h) || \
+                tmux select-pane -L"
+bind -n C-j run "($is_vim && tmux send-keys C-j)  || \
+                ($is_fzf && tmux send-keys C-j) || \
+                tmux select-pane -D"
+bind -n C-k run "($is_vim && tmux send-keys C-k) || \
+                ($is_fzf && tmux send-keys C-k)  || \
+                tmux select-pane -U"
+bind -n C-l run "($is_vim && tmux send-keys C-l) || \
+                tmux select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # pane resizing
 bind -r H resize-pane -L 2
