tmux-restruct location change

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ unbind '"'
 unbind %
 
 # tmux-restruct
-run-shell ~/clone/path/resurrect.tmux
+run-shell ~/tmux-resurrect/resurrect.tmux
 
 # -- display -------------------------------------------------------------------
 
