--- a/tmux.conf
+++ b/tmux.conf
@@ -138,6 +138,8 @@ run -b 'tmux bind -ct vi-edit Escape cancel 2> /dev/null || true'
 
 
 # -- copy mode -----------------------------------------------------------------
+# vi mode on
+setw -g mode-keys vi
 
 bind Enter copy-mode # enter copy mode
 
