--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,7 +173,8 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # @see https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 # #set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'laktak/extrakto'
