--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -176,6 +176,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+set -g @plugin 'cih9088/tmux-plugin-sysstat'
 # #set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'laktak/extrakto'
 
@@ -853,6 +854,11 @@ run-shell '~/.tmux/plugins/tpm/tpm'
 #   tmux_conf_theme_root_bg=${tmux_conf_theme_root_bg:-'none'}
 #   tmux_conf_theme_root_attr=${tmux_conf_theme_root_attr:-'bold,blink'}
 #
+#   tmux_conf_theme_prefixoff=${tmux_conf_theme_prfixoff:-'⚰'}
+#   tmux_conf_theme_prefixoff_fg=${tmux_conf_theme_prefixoff_fg:-'#e4e4e4'}
+#   tmux_conf_theme_prefixoff_bg=${tmux_conf_theme_prefixoff_bg:-'none'}
+#   tmux_conf_theme_prefixoff_attr=${tmux_conf_theme_prefixoff_attr:-'none'}
+#
 #   # -- status left style
 #
 #   tmux_conf_theme_status_left=${tmux_conf_theme_status_left-' ❐ #S '}
@@ -862,6 +868,9 @@ run-shell '~/.tmux/plugins/tpm/tpm'
 #
 #   tmux_conf_theme_status_left=$(echo "$tmux_conf_theme_status_left" | sed \
 #     -e "s/#{pairing}/#[fg=$tmux_conf_theme_pairing_fg]#[bg=$tmux_conf_theme_pairing_bg]#[$tmux_conf_theme_pairing_attr]#{?session_many_attached,$tmux_conf_theme_pairing,}/g")
+#
+#   tmux_conf_theme_status_left=$(echo "$tmux_conf_theme_status_left" | sed \
+#     -e "s/#{prefixoff}/#[fg=$tmux_conf_theme_prefixoff_fg]#[bg=$tmux_conf_theme_prefixoff_bg]#[$tmux_conf_theme_prefixoff_attr]#{?client_prefixoff,$tmux_conf_theme_prefixoff,}/g")
 #
 #   tmux_conf_theme_status_left=$(echo "$tmux_conf_theme_status_left" | sed \
 #     -e "s/#{prefix}/#[fg=$tmux_conf_theme_prefix_fg]#[bg=$tmux_conf_theme_prefix_bg]#[$tmux_conf_theme_prefix_attr]#{?client_prefix,$tmux_conf_theme_prefix,}/g")
@@ -1054,17 +1063,21 @@ run-shell '~/.tmux/plugins/tpm/tpm'
 #   esac
 #
 #   case "$status_left $status_right" in
-#     *'#{username}'*|*'#{hostname}'*|*'#{username_ssh}'*|*'#{hostname_ssh}'*)
+#     *'#{username}'*|*'#{hostname}'*|*'#{username_ssh}'*|*'#{hostname_ssh}'*|*'#{username_nossh}'*|*'#{hostname_nossh}'*)
 #       status_left=$(echo "$status_left" | sed \
 #         -e 's%#{username}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} false #D)%g' \
 #         -e 's%#{hostname}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} false #D)%g' \
 #         -e 's%#{username_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} true #D)%g' \
-#         -e 's%#{hostname_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} true #D)%g')
+#         -e 's%#{hostname_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} true #D)%g' \
+#         -e 's%#{username_nossh}%#(whoami)%g' \
+#         -e 's%#{hostname_nossh}%#(hostname)%g')
 #       status_right=$(echo "$status_right" | sed \
 #         -e 's%#{username}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} false #D)%g' \
 #         -e 's%#{hostname}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} false #D)%g' \
 #         -e 's%#{username_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} true #D)%g' \
-#         -e 's%#{hostname_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} true #D)%g')
+#         -e 's%#{hostname_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} true #D)%g' \
+#         -e 's%#{username_nossh}%#(whoami)%g' \
+#         -e 's%#{hostname_nossh}%#(hostname)%g')
 #       ;;
 #   esac
 #
