--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -174,7 +174,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'cih9088/tmux-plugin-sysstat'
 # #set -g @plugin 'tmux-plugins/tmux-copycat'
