--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -54,9 +54,6 @@ set-window-option -g mode-keys vi
 # reload configuration
 bind-key r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
-# toggle mouse
-bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
-
 # prefix c
 bind-key c new-window -c "#{pane_current_path}"
 
@@ -118,7 +115,10 @@ unbind '"'
 unbind %
 
 # Synchronize panes
-bind-key e set-window-option synchronize-pane
+bind-key e set-window-option synchronize-pane \; display-message "synchronize is now #{?pane_synchronized,on,off}"
+
+# toggle mouse
+bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 
 # -- copy mode -----------------------------------------------------------------
 bind Enter copy-mode # enter copy mode
