--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,6 +41,13 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Key binding in the status line (bind-key :)
 set-option -g status-keys emacs
 
+# mouse mode
+set -g mouse
+
+# # toggle mouse
+# bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
+
+
 # -------------------------------------------------------------------
 # Window options
 # -------------------------------------------------------------------
@@ -72,8 +79,6 @@ bind-key -r > swap-window -t :+
 bind-key -r < swap-window -t :-
 
 # Back and forth
-# bind-key bspace previous-window
-# bind-key space next-window
 bind-key Space next-layout # Overridden
 
 # pane navigation
@@ -81,8 +86,8 @@ bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
-bind > swap-pane -D       # swap current pane with the next one
-bind < swap-pane -U       # swap current pane with the previous one
+# bind > swap-pane -D       # swap current pane with the next one
+# bind < swap-pane -U       # swap current pane with the previous one
 # bind-key tab select-pane -t :.+
 # bind-key btab select-pane -t :.-
 
@@ -117,9 +122,6 @@ unbind %
 # Synchronize panes
 bind-key e set-window-option synchronize-pane \; display-message "synchronize is now #{?pane_synchronized,on,off}"
 
-# toggle mouse
-bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
-
 # -- copy mode -----------------------------------------------------------------
 bind Enter copy-mode # enter copy mode
 
@@ -127,21 +129,31 @@ run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
-run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+# run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
+# run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+# run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
+# run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
+# run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
+# run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
-# copy to Mac OSX clipboard
-if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
-# copy to X11 clipboard
-if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
-if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
-# copy to Windows clipboard
-if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
-if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
+# # copy to Mac OSX clipboard
+# if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+# # copy to X11 clipboard
+# if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
+# if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# # copy to Windows clipboard
+# if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
+# if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
+
+yank="~/.tmux/yank.sh"
+# Copy selected text
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
+bind -T copy-mode-vi Y send-keys -X copy-line \;\
+    run "tmux save-buffer - | $yank"
+bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
+    run "tmux save-buffer - | $yank"
+bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
+    run "tmux save-buffer - | $yank"
 
 # Clear scrollback buffer
 bind-key C-l send-keys C-l \; clear-history
@@ -210,7 +222,6 @@ bind -T root F12  \
      set -g status-position top \;\
      refresh-client -S \;\
 
-
  bind -T off F12 \
      set -u prefix \;\
      set -u key-table \;\
@@ -222,35 +233,10 @@ bind -T root F12  \
 # TPM
 # @see https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'cih9088/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 run '~/.tmux/plugins/tpm/tpm'
 
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes 'ssh watch glances'
 
-# EOF
-#
-# # exit the script if any statement returns a non-true return value
-# set -e
-#
-# export LC_NUMERIC=C
-#
-# __newline='
-# '
-#
-# _toggle_mouse() {
-#   old=$(tmux show -gv mouse)
-#   new=""
-#
-#   if [ "$old" = "on" ]; then
-#     new="off"
-#   else
-#     new="on"
-#   fi
-#
-#   tmux set -g mouse $new \;\
-#        display "mouse: $new"
-# }
-#
-# _ho() {
-#   echo 'ho'
-# }
-#
-# "$@"
