--- a/tmux/.gitignore
+++ b/tmux/.gitignore
@@ -1,8 +1,2 @@
-# Ignore everything in this directory
-*
-# Except this file
-!.gitignore
-!tmux.conf
-!tmux.conf.local
-!tmux.conf.remote
-!renew_env.sh
+plugins
+resurrect
