--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,15 +17,20 @@
 unbind-key c-b
 set-option -g prefix c-a
 
-set-option -g base-index 1         # start windows numbering at 1
-set-window-option -g pane-base-index 1   # make pane numbering consistent with windows
+# start windows numbering at 1
+set-option -g base-index 1
+# make pane numbering consistent with windows
+set-window-option -g pane-base-index 1
+# Renumber windows when a window is closed
+set-option -g renumber-windows on
 
-set-option -g renumber-windows on           # Renumber windows when a window is closed
+# History
+set-option -g history-limit 102400
 
-set-option -g history-limit 102400      # History
-
-set-option -s escape-time 10                     # faster command sequences
-set-option -g repeat-time 500             # Repeat time limit (ms)
+# faster command sequences
+set-option -s escape-time 10
+# Repeat time limit (ms)
+set-option -g repeat-time 500
 
 # 256-color terminal
 set-option -g default-terminal "screen-256color"
@@ -35,22 +40,26 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
-# # Sierra
-# set-option -g default-command "reattach-to-user-namespace -l bash"
-
 # Key binding in the status line (bind-key :)
 set-option -g status-keys emacs
 
 # mouse mode
-set -g mouse
+set-option -g mouse
 
-# # toggle mouse
-# bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
+# Prevent from window renaming
+set-option -g allow-rename off
+
+# toggle mouse
+bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
+
+# # Prompt to rename window right after it's created
+# set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
 
 # -------------------------------------------------------------------
 # Window options
 # -------------------------------------------------------------------
+
 # Copy-mode
 set-window-option -g mode-keys vi
 
@@ -122,6 +131,10 @@ unbind %
 # Synchronize panes
 bind-key e set-window-option synchronize-pane \; display-message "synchronize is now #{?pane_synchronized,on,off}"
 
+# kill window
+unbind &
+bind X confirm-before -p "kill-window #W? (y/n)" kill-window
+
 # -- copy mode -----------------------------------------------------------------
 bind Enter copy-mode # enter copy mode
 
@@ -145,6 +158,9 @@ run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || t
 # if -b 'command -v clip.exe > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | clip.exe"'
 # if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboard"'
 
+if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
+           "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
+
 yank="~/.tmux/yank.sh"
 # Copy selected text
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
@@ -156,7 +172,7 @@ bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
     run "tmux save-buffer - | $yank"
 
 # Clear scrollback buffer
-bind-key C-l send-keys C-l \; clear-history
+bind-key C-l send-keys C-l \; clear-history \; display-message "pane history cleared"
 
 # Goyo
 bind-key G set status
@@ -180,7 +196,7 @@ set-option -g status-justify left
 set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(whoami)@#h #[bg=colour236] '
 set-option -g status-left-length 30
 set-option -g status-bg colour237
-set-option -g status-right '#[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
+set-option -g status-right '#{prefix_highlight} #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-interval 60  # redraw status line every 10 seconds
 
 set-option -g pane-border-status bottom
@@ -198,9 +214,6 @@ set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215
 # -------------------------------------------------------------------
 # fzf integration
 # -------------------------------------------------------------------
-
-# fzf-locate (all)
-bind-key -n 'M-`' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # select-pane (@george-b)
 bind-key 0 run "tmux split-window -l 12 'zsh -ci ftpane'"
@@ -235,8 +248,31 @@ bind -T root F12  \
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'cih9088/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-processes 'ssh watch glances'
 
+set -g @prefix_highlight_show_copy_mode 'on'
+
+# EOF
+#
+# # exit the script if any statement returns a non-true return value
+# set -e
+#
+# _toggle_mouse() {
+#   old=$(tmux show -gv mouse)
+#   new=""
+#
+#   if [ "$old" = "on" ]; then
+#     new="off"
+#   else
+#     new="on"
+#   fi
+#
+#   tmux set -g mouse $new \;\
+#        display "mouse mode is now $new"
+# }
+#
+# "$@"
