--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "script/spinner"]
 	path = script/spinner
-	url = https://github.com/cih9088/bash-spinner
+	url = https://github.com/cih9088/bash-spinner.git
