focus pane is more differentiable

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,6 +55,9 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 # # Prompt to rename window right after it's created
 # set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
+# focus
+# set -g focus-events on
+
 
 # -------------------------------------------------------------------
 # Window options
@@ -209,6 +212,7 @@ set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215
 
 # set-window-option -g window-style 'bg=colour238'
 # set-window-option -g window-active-style 'bg=colour237'
+set-window-option -g window-style 'fg=colour245'
 
 
 # -------------------------------------------------------------------
