tmux disable mode enhanced

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -180,7 +180,7 @@ bind-key C-l send-keys C-l \; clear-history \; display-message "pane history cle
 # Goyo
 bind-key G set status
 
-set -g update-environment \
+set-option -g update-environment \
   "DISPLAY\
   SSH_ASKPASS\
   SSH_AUTH_SOCK\
@@ -212,7 +212,6 @@ set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215
 
 # set-window-option -g window-style 'bg=colour238'
 # set-window-option -g window-active-style 'bg=colour237'
-set-window-option -g window-style 'fg=colour245'
 
 
 # -------------------------------------------------------------------
@@ -232,33 +231,35 @@ if-shell 'test -n "$SSH_CLIENT"' \
 
 # see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
 bind -T root F12  \
-     set prefix None \;\
-     set key-table off \;\
+     set-option prefix None \;\
+     set-option key-table off \;\
      set-option status-left '#[bg=colour96] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour213] #(whoami)@#h #[bg=colour236] ' \;\
-     set-option status-right '#[bg=colour236] #[bg=colour235]#[fg=colour213] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour96] ' \;\
-     set -g status-position top \;\
+     set-option status-right '#[bg=colour236] #[bg=colour235]#[fg=colour213] DISABLED #[bg=colour23k] #[bg=colour237] #[bg=colour96] ' \;\
+     set-window-option -g window-status-format '#[bg=colour238]#[fg=colour101] #I #[bg=colour239]#[fg=colour102] #[bg=colour240]#W#[bg=colour239]#[fg=colour249]#F#[bg=colour238] ' \;\
+     set-option -g status-position top \;\
      refresh-client -S \;\
 
  bind -T off F12 \
-     set -u prefix \;\
-     set -u key-table \;\
-     set -u status-left \;\
-     set -u status-right \;\
-     set -g status-position bottom \;\
+     set-option -u prefix \;\
+     set-option -u key-table \;\
+     set-option -u status-left \;\
+     set-option -u status-right \;\
+     set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] ' \;\
+     set-option -g status-position bottom \;\
      refresh-client -S
 
 # TPM
 # @see https://github.com/tmux-plugins/tpm
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'cih9088/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'cih9088/tmux-resurrect'
+set-option -g @plugin 'tmux-plugins/tmux-continuum'
+set-option -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-processes 'ssh watch glances'
+set-option -g @resurrect-capture-pane-contents 'on'
+set-option -g @resurrect-processes 'ssh watch glances'
 
-set -g @prefix_highlight_show_copy_mode 'on'
+set-option -g @prefix_highlight_show_copy_mode 'on'
 
 # EOF
 #
