--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -17,6 +17,7 @@
     "python.venvFolders": ["envs", ".pyenv", ".direnv", ".virtualenvs"],
     "python.venvPath": "~/.virtualenvs",
     "python.autoUpdateLanguageServer": true,
+    "python.pythonPath": "python",
 
     "snippets.ultisnips.directories": [
         "UltiSnips",
@@ -24,20 +25,5 @@
     ],
 
     "languageserver": {
-        "bash": {
-            "command": "bash-language-server",
-            "args": ["start"],
-            "filetypes": ["sh"],
-            "ignoredRootPaths": ["~"]
-        },
-        "ccls": {
-            "command": "ccls",
-            "filetypes": ["c", "cpp", "objc", "objcpp"],
-            "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-            "initializationOptions": {
-                "cacheDirectory": "/tmp/ccls"
-            }
-        }
-    },
-    "python.pythonPath": "/Users/andy/.virtualenvs/venv/bin/python"
+    }
 }
