--- a/nvim/coc-settings-base.json
+++ b/nvim/coc-settings-base.json
@@ -1,12 +1,20 @@
 {
-    "suggest.maxPreviewWidth": 50,
+    "suggest.maxPreviewWidth": 80,
     "suggest.enablePreview": true,
+    "suggest.detailMaxLength": 100,
     "suggest.autoTrigger": "always",
     "suggest.snippetIndicator": "~",
     "suggest.preferCompleteThanJumpPlaceholder": false,
     "suggest.timeout": 2000,
     "suggest.echodocSupport": false,
+    "signature.enable": true,
+    "signature.target": "float",
+    "signature.preferShownAbove": false,
+    "signature.hideOnTextChange": false,
+    "codeLens.enable": true,
+    "coc.preferences.extensionUpdateCheck": true,
     "coc.preferences.hoverTarget": "float",
+    "coc.preferences.colorSupport": false,
     "coc.preferences.enableFloatHighlight": true,
     "coc.source.file.ignoreHidden": false,
     "list.nextKeymap": "<C-n>",
@@ -15,7 +23,7 @@
     "python.jediEnabled": false,
     "python.trace.server": "off",
     "python.venvFolders": ["envs", ".pyenv", ".direnv", ".virtualenvs"],
-    "python.venvPath": "~/.virtualenvs",
+    "python.venvPath": "",
     "python.autoUpdateLanguageServer": true,
     "python.pythonPath": "python",
 
