--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,10 +33,10 @@ set-option -s escape-time 10
 set-option -g repeat-time 500
 
 # 256-color terminal
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
 
 # Add truecolor support (tmux info | grep Tc)
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",*256col*:Tc"
 
 # set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
