--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -198,11 +198,17 @@ bind '$' run "~/.tmux/renew_env.sh"
 # -------------------------------------------------------------------
 # Decoration (256-color)
 # -------------------------------------------------------------------
+mousemode_indicator=0
 set-option -g status-justify left
 set-option -g status-left '#[bg=colour72] #[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(whoami)@#h #[bg=colour236] '
 set-option -g status-left-length 30
 set-option -g status-bg colour237
-set-option -g status-right '#{prefix_highlight} #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
+# set-option -g status-right '#{prefix_highlight} #{?pane_synchronized, #[bg=colour236] #[bg=green]#[fg=white] SYNC #[bg=colour236] ,}#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
+set-option -g status-right '#{?client_prefix,#[bg=colour237] #[bg=colour236] #[bg=colour4]#[fg=colour15] ^A #[bg=colour236] ,}\
+#{?pane_in_mode,#[bg=colour237] #[bg=colour236] #[bg=colour3]#[fg=colour15] COPY #[bg=colour236] ,}\
+#{?pane_synchronized,#[bg=colour237] #[bg=colour236] #[bg=colour10]#[fg=colour15] SYNC #[bg=colour236] ,}\
+#{?mousemode_indicator,#[bg=colour237] #[bg=colour236] #[bg=colour1]#[fg=colour15] MOUSE #[bg=colour236] ,}\
+#[bg=colour237] #[bg=colour236] #[bg=colour235]#[fg=colour185] #(date "+%a %d %b %H:%M") #[bg=colour236] #[bg=colour237] #[bg=colour72] '
 set-option -g status-interval 60  # redraw status line every 10 seconds
 
 set-option -g pane-border-status bottom
@@ -256,13 +262,10 @@ bind -T root F12  \
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'cih9088/tmux-resurrect'
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
-set-option -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 run '~/.tmux/plugins/tpm/tpm'
 
 set-option -g @resurrect-capture-pane-contents 'on'
 set-option -g @resurrect-processes 'ssh watch glances'
-
-set-option -g @prefix_highlight_show_copy_mode 'on'
 
 # EOF
 #
@@ -280,8 +283,10 @@ set-option -g @prefix_highlight_show_copy_mode 'on'
 #
 #   if [ "$old" = "on" ]; then
 #     new="off"
+#     tmux set-environment -g mousemode_indicator 0
 #   else
 #     new="on"
+#     tmux set-environment -g mousemode_indicator 1
 #   fi
 #
 #   tmux set -g mouse $new \;\
