--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -213,8 +213,8 @@ set-option -g status-interval 60  # redraw status line every 10 seconds
 
 set-option -g pane-border-status bottom
 set-option -g pane-border-format "#{pane_index} #{pane_current_command}"
-set-option -g pane-active-border-fg colour253
-set-option -g pane-border-fg colour243
+set-option -g pane-active-border-style "fg=colour253"
+set-option -g pane-border-style "fg=colour243"
 
 set-window-option -g window-status-format '#[bg=colour238]#[fg=colour107] #I #[bg=colour239]#[fg=colour110] #[bg=colour240]#W#[bg=colour239]#[fg=colour195]#F#[bg=colour238] '
 set-window-option -g window-status-current-format '#[bg=colour236]#[fg=colour215] #I #[bg=colour235]#[fg=colour167] #[bg=colour234]#W#[bg=colour235]#[fg=colour195]#F#[bg=colour236] '
