--- a/config_osx.yaml
+++ b/config_osx.yaml
@@ -61,11 +61,15 @@ shellchecker:
   local: no
   force: yes
 
-bash_language_server:
+bash-language-server:
   install: yes
   force: yes
 
-nodejs:
+node:
+  install: yes
+  force: no
+
+yarn:
   install: yes
   force: no
 
